# mtoc

./: .cirrus.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  TODO.md
.ci/: cargo-cache-install.ps1  cargo_install_cache_populate_script.ps1  cargo_install_cache_populate_script.sh  crate_version.ps1
mtoc/: Cargo.toml
mtoc-parser/: Cargo.toml  Makefile.toml  README.md  README.tpl
mtoc-parser/examples/: simple.rs
mtoc-parser/src/: format.rs  header.rs  lib.rs  normalize.rs  write.rs
mtoc-parser/tests/: version-numbers.rs
mtoc/src/: check.rs  cli.rs  main.rs  util.rs
mtoc/tests/: helper.rs  integration_tests.rs  io_tests.rs
mtoc/tests/fixtures/: complex.md  simple-current.md  simple-empty.md  simple-new.md  simple-old.md  test.md
mtoc/tests/snapshots/: io_tests__complex.md.stdout.snap  io_tests__simple-empty.md.stdout.snap  io_tests__simple-new.md.stdout.snap  io_tests__simple-old.md.stdout.snap
src/: main.rs
