[package]
name = "mtoc"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/fnichol/mtoc"
documentation = "https://github.com/fnichol/mtoc"
homepage = "https://github.com/fnichol/mtoc"
keywords = []
categories = []
description = """
Generates and writes a table of contents into any Markdown document.
"""

[dependencies]
chrono = "0.4.6"
failure = "0.1.5"
human-panic = "1.0.1"
log = "0.4.6"
mtoc-parser = { path = "../mtoc-parser" }
structopt = { version = "0.2.16", default-features = false, features = ["suggestions", "wrap_help"] }
